--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "^2.1.3",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
